// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="simple-card__ContainerStyle-sc-1g5bppt-0 ixVVov k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="marger__StyledMarger-q3lecu-0 jgfcQX image__StyledImageContainer-sc-8olw7b-2 iPOTuX k-Card__imageContainer"
  >
    <img
      alt=""
      className="image__StyledImage-sc-8olw7b-0 KMqEW k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with imageContainerRatio props matches with snapshot 1`] = `
<div
  className="simple-card__ContainerStyle-sc-1g5bppt-0 ixVVov k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="marger__StyledMarger-q3lecu-0 jgfcQX image__StyledImageContainer-sc-8olw7b-2 hQoFnZ k-Card__imageContainer"
  >
    <img
      alt=""
      className="image__StyledImage-sc-8olw7b-0 KMqEW k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with withPlayerButtonOnImage props matches with snapshot 1`] = `
<div
  className="simple-card__ContainerStyle-sc-1g5bppt-0 ixVVov k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="marger__StyledMarger-q3lecu-0 jgfcQX image__StyledImageContainer-sc-8olw7b-2 iPOTuX k-Card__imageContainer"
  >
    <div
      className="image__StyledPlayerButton-sc-8olw7b-1 bgJcrr"
    >
      <span
        className="k-u-color-background1 k-u-size-default k-u-weight-regular"
      >
        ►
      </span>
    </div>
    <img
      alt=""
      className="image__StyledImage-sc-8olw7b-0 KMqEW k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="simple-card__ContainerStyle-sc-1g5bppt-0 ixVVov k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="marger__StyledMarger-q3lecu-0 jgfcQX image__StyledImageContainer-sc-8olw7b-2 iPOTuX k-Card__imageContainer"
  >
    <img
      alt=""
      className="image__StyledImage-sc-8olw7b-0 KMqEW k-Card__image"
      src=""
    />
  </div>
</div>
`;
